🧹 Various Java cleanups